--- a/header.html
+++ b/header.html
@@ -9,12 +9,9 @@
     <title>header</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <header class="header">
-        <img class="header__img"
-            src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png"
-            alt="">
+        <img class="header__img" src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="">
         <div class="header__menu">
             <div class="header__menu-profile">
                 <img src="./user-icon.png" alt="user">
@@ -28,6 +25,9 @@
             </div>
         </div>
     </header>
+    <section class="main">
+        <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+        <input class="input" type="text" placeholder="Buscar...">
+    </section>
 </body>
-
 </html>
